<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="search">Search</string>
    <string name="musicLibrary">Music library</string>
    <string name="settings">Settings</string>
    <string name="dark_theme">Dark theme</string>
    <string name="share_app">Share app</string>
    <string name="write_to_support">Write to support</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="share_address" translatable="false">https://practicum.yandex.ru/android-developer/</string>
    <string name="term_address" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="user_mail" translatable="false">mailto:sapegin.varg@yandex.ru</string>
    <string name="message_subject">Message to the developers of Playlist Maker app</string>
    <string name="message_body">Thanks to the developers for the cool app!</string>
    <string name="empty_search">Nothing found</string>
    <string name="internet_error">Communication problems\n\nUpload failed. Check your internet connection.</string>
    <string name="update">Update</string>
    <string name="search_history">Search history</string>
    <string name="clear_history">Clear history</string>
    <string name="empty" translatable="false"> </string>
    <string name="duration">Duration</string>
    <string name="album">Album</string>
    <string name="year">Year</string>
    <string name="genre">Genre</string>
    <string name="country">Country</string>
    <string name="i_tunes_base_url" translatable="false">https://itunes.apple.com</string>
    <string name="history_key" translatable="false">search history</string>
    <string name="sh_prefs_name" translatable="false">shared prefs name</string>
    <string name="theme_key" translatable="false">theme key</string>
    <string name="track_key" translatable="false">track key</string>
    <string name="empty_track_library">Your media library is empty.</string>
    <string name="empty_playlists_library">You haven\'t created\nany playlists.</string>
    <string name="new_playlist">New playlist</string>
    <string name="featured_tracks">Featured tracks</string>
    <string name="playlists">Playlists</string>
    <string name="name">Name*</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="new_playlist_finish">Finish creating a playlist?</string>
    <string name="new_playlist_warning">All unsaved data will be lost.</string>
    <string name="cancel">Cancel</string>
    <string name="complete">Complete</string>
    <string name="permission_rationale">Permission to access media files is required to select a playlist cover.</string>
    <string name="np_message_begin">Playlist</string>
    <string name="np_message_end">created.</string>
    <string name="track_match">track</string>
    <string name="track_unmatch">track</string>
    <string name="tracks_match_a">tracks</string>
    <string name="tracks_match_b">tracks</string>
    <string name="tracks_unmatch">tracks</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="track_already_added">The track has already been added to the playlist</string>
    <string name="added_to_playlist">Added to playlist</string>
    <string name="share">Share</string>
    <string name="edit_information">Edit information</string>
    <string name="delete_playlist">Delete playlist</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="want_to_delete_a_playlist">Want to delete a playlist?</string>
    <string name="minute_match">minute</string>
    <string name="minutes_match">minutes</string>
    <string name="minutes_unmatch">minutes</string>
    <string name="minutes_unmatch_a">minutes</string>
    <string name="delete_track">Delete track</string>
    <string name="delete_track_body">Are you sure you want to remove the track from the playlist?</string>
    <string name="delete">Delete</string>
    <string name="no_tracks_added">No tracks have been added to this playlist yet</string>
    <string name="nothing_to_share">This playlist has no tracks to share</string>
</resources>