<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/over_activity_background"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/settings"
        app:titleTextAppearance="@style/ToolbarTextAppearance.Title" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/dark_theme_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dark_theme"
        android:textColor="?attr/settings_activity_button_text"
        android:theme="@style/MySwitch123"
        />

    <Button
        android:id="@+id/share_app_button"
        style="@style/SettingsActivityButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_app"
        app:icon="@drawable/share_icon" />

    <Button
        android:id="@+id/support_button"
        style="@style/SettingsActivityButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/write_to_support"
        app:icon="@drawable/support_icon" />

    <Button
        android:id="@+id/terms_button"
        style="@style/SettingsActivityButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms_of_use"
        app:icon="@drawable/arrow_forward_icon" />
</LinearLayout>