<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/main_activity_background"
    android:orientation="vertical"
    android:padding="@dimen/main_padding"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display"
        android:layout_marginBottom="16dp"
        android:text="@string/app_name"
        android:textColor="?attr/main_activity_title_text"
        android:textSize="@dimen/big_text"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/search_button"
        style="@style/MainActivityButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/search"
        app:icon="@drawable/search_icon"
        />

    <Button
        android:id="@+id/library_button"
        style="@style/MainActivityButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/musicLibrary"
        app:icon="@drawable/library_music_icon"
        />

    <Button
        android:id="@+id/settings_button"
        style="@style/MainActivityButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/settings"
        app:icon="@drawable/settings_icon"
        />
</LinearLayout>